# python_aoc2022

./: pyproject.toml
day01/: code.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py  shared.py
day04/: part1.py  part2.py
day05/: code.py  part1.py
day06/: code.py
day07/: code.py
day08/: code.py
day09/: code.py
day10/: code.py
day11/: code.py
tests/: test_day10.py
