[tool.poetry]
name = "python_aoc2022"
version = "0.1.0"
description = ""
authors = ["Dan O'Sullivan <dan@osull.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"